Setup Cloudinary for storing images

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -39,7 +39,7 @@ main {
     padding: 20px;
     max-width: 1200px;
     margin: 0 auto;
-    background-color: #A0C090;
+    background-color: #F5F5DC;
 }
 
 footer {
