--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -9,20 +9,22 @@
         <div class="col-md-4">
             <div class="card mb-4">
                 <div class="card-body">
-                    <div class="d-flex">
-                        <div class="image-container me-3">
-                            {% if book.cover_image %}
-                            <img class="img-fluid" src="{{ book.cover_image.url }}" alt="{{ book.title }}" style="max-width: 100px;">
-                            {% else %}
-                            <img class="img-fluid" src="{% static 'images/book_default.jpg' %}" alt="placeholder image" style="max-width: 100px;">
-                            {% endif %}
+                    <a href="{% url 'book_detail' book.slug %}" class="book-link no-underline">
+                        <div class="d-flex">
+                            <div class="image-container me-3">
+                                {% if book.cover_image %}
+                                <img class="img-fluid" src="{{ book.cover_image.url }}" alt="{{ book.title }}" style="max-width: 100px;">
+                                {% else %}
+                                <img class="img-fluid" src="{% static 'images/book_default.jpg' %}" alt="placeholder image" style="max-width: 100px;">
+                                {% endif %}
+                            </div>
+                            <div class="flex-grow-1">
+                                <h4 class="title mb-1">{{ book.title }}</h4>
+                                <p class="author mb-1">Author: {{ book.author }}</p>
+                                <p class="card-text text-muted h6 mb-0">Published in: {{ book.published_year }}</p>
+                            </div>
                         </div>
-                        <div class="flex-grow-1">
-                            <h4 class="title mb-1">{{ book.title }}</h4>
-                            <p class="author mb-1">Author: {{ book.author }}</p>
-                            <p class="card-text text-muted h6 mb-0">Published in: {{ book.published_year }}</p>
-                        </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
