--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -6,6 +6,7 @@ body {
     padding: 0;
     background-color: #F5F5DC; 
     color: #333;
+    min-height: 100vh; /* Set minimum height to fill the viewport */
 }
 
 header {
