--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6 mt-3">
-            <div class="border p-4">
+            <div class="form-container p-4">
                 <h3>{% trans "Sign In" %}</h3>
 
                 <p>{% blocktrans %}Welcome back to Page Turner. To gain access to all our features, please log in. 
