--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-8 mt-3">
-            <div class="border p-4">
+            <div class="form-container p-4">
                 <h3 class="text-center">{% trans "Sign Out" %}</h3>
 
                 <p class="text-center">{% trans 'Are you sure you want to sign out?' %}</p>
