--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-8 mt-3">
-            <div class="border p-4">
+            <div class="form-container p-4">
                 <h3 class="text-center">{% trans "Sign Up" %}</h3>
 
                 <p class="text-center">{% blocktrans %}
@@ -24,7 +24,7 @@
                     {% if redirect_field_value %}
                     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                     {% endif %}
-                    <button class="btn btn-primary" type="submit">{% trans "Sign Up" %} &raquo;</button>
+                    <button class="btn btn-primary" type="submit">{% trans "Sign Up" %} </button>
                 </form>
             </div>
         </div>
