--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -4,7 +4,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #F5F5DC; 
+    background-color: #d9d2c0;
     color: #333;
     display: flex;
     flex-direction: column;
@@ -35,7 +35,7 @@ nav {
 
 .navbar-nav .nav-item .nav-link.active {
     font-weight: bold;
-    color: #fae17b;
+    color: #c98f61
 }
 
 main {
@@ -43,7 +43,7 @@ main {
     padding: 20px;
     max-width: 1200px;
     margin: 0 auto;
-    background-color: #F5F5DC;
+    background-color: #d9d2c0;
 }
 
 footer {
@@ -89,5 +89,14 @@ footer p {
 
 .form-container {
     background-color: #f5f5e0; 
-    border: 2px solid #8f8f8f; 
+    border: 2px solid #161616; 
+}
+
+.card{
+    border: 2px solid #c98f61;
+    background-color: #f4f2f3;
+}
+
+.title, .author{
+    color: #333;
 }
