--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,8 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="{{ home_url }}">Page Turner</a>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand navbar-brand-custom" href="{{ home_url }}">Page Turner</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
