--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,10 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     
 </head>
+
 <body>
     <header>
+        <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand navbar-brand-custom" href="{{ home_url }}">Page Turner</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,6 +44,7 @@
                         href="{{ books_url }}">Books</a>
                     </li>
                 </ul>
+                <!-- Login, out and register -->
                 <div class="d-flex">
                     <ul class="navbar-nav">
                         {% if user.is_authenticated %}
@@ -62,6 +65,22 @@
             </div>
         </nav>
     </header>
+    
+    <!-- displaying Django messages -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                {% for message in messages %}
+                <div class="alert {{ message.tags }} alert-dismissible
+                fade show" id="msg" role="alert">
+                {{ message | safe }}
+                <button type="button" class="btn-close"
+                    data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 
     <main>
         {% block content %}
@@ -77,7 +96,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    
+
     {% block extras %}
     {% endblock %}
     
