--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -3,7 +3,6 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-4">
@@ -18,105 +17,120 @@
             <p>{{ book.description|safe }}</p>
         </div>
     </div>
-</div>
 
-
-<!-- Displaying count of comments -->
-<div class="row">
-    <div class="col-12">
-        <hr>
-    </div>
-    <div class="col-12">
-        <strong class="text-secondary">
-            <i class="far fa-comments"></i> {{ comment_count }} Comments
-        </strong>
-    </div>
-</div>
-
-<!-- Displaying Comments -->
-<div class="row">
-    <div class="col-md-8 card mb-4 mt-3 ">
-        <h3>Comments:</h3>
-        <div class="card-body">
-            <!-- We want a for loop inside the empty control tags
-            to iterate through each comment in comments -->
-            {% for comment in comments %}
-            <div class="p-2 comments
-            {% if not comment.approved and comment.user == user %}
-            faded{% elif not comment.approved %} d-none{% endif %}">
-                <p class="font-weight-bold">
-                    {{ comment.user }}:
-                    <span class="font-weight-normal">
-                        {{ comment.created_on }}
-                    </span> wrote:
-                </p>
-                <div id="comment{{ comment.id }}">
-                    {{ comment.body | linebreaks }}
+    <!-- Rating Section -->
+    <div class="row mt-4">
+        <div class="col-12">
+            <hr>
+            {% if user.is_authenticated %}
+            <p>Please rate this book:</p>
+            <form id="ratingForm" method="POST">
+                {% csrf_token %}
+                <div class="rating-stars">
+                    <i class="far fa-star star-icon" data-value="1"></i>
+                    <i class="far fa-star star-icon" data-value="2"></i>
+                    <i class="far fa-star star-icon" data-value="3"></i>
+                    <i class="far fa-star star-icon" data-value="4"></i>
+                    <i class="far fa-star star-icon" data-value="5"></i>
                 </div>
-                {% if not comment.approved and comment.user == user %}
-                <p class="approval">
-                    This comment is awaiting approval
-                </p>
-                {% endif %}
+                <input type="hidden" name="rating" id="rating-input" value="0">
+                <div class="mt-2">
+                    <p>Your rating: <span id="user-rating">{{ user_rating }}</span></p>
+                    <button id="submitButton" type="submit" class="btn btn-primary">Submit Rating</button>
+                </div>
+            </form>
+            {% else %}
+                    <p>Log in to rate this book</p>
+            {% endif %}
+        </div>
+    </div>
 
-                {% if user.is_authenticated and comment.user == user %}
-                <button class="btn btn-delete"
-                    data-comment_id="{{ comment.id }}">Delete</button>
-                <button class="btn btn-edit"
-                    data-comment_id="{{ comment.id }}">Edit</button>
-                {% endif %}
-            </div>
-            <!-- Our for loop ends here -->
+    <!-- Comments Section -->
+    <div class="row mt-4">
+        <div class="col-12">
+            <hr>
+            <strong class="text-secondary">
+                <i class="far fa-comments"></i> {{ comment_count }} Comments
+            </strong>
+        </div>
+    </div>
+    <div class="row mt-3">
+        <div class="col-md-8">
+            <h3>Comments:</h3>
+            {% if comment_count == 0 %}
+                <p>Be the first to leave a comment</p>
+            {% endif %}
+            {% for comment in comments %}
+                <div class="card mb-3 {% if not comment.approved and comment.user == user %} faded {% elif not comment.approved %} d-none {% endif %}">
+                    <div class="card-body">
+                        <p class="font-weight-bold">
+                            {{ comment.user }}:
+                            <span class="font-weight-normal">{{ comment.created_on }}</span> wrote:
+                        </p>
+                        <div id="comment{{ comment.id }}">
+                            {{ comment.body | linebreaks }}
+                        </div>
+                        {% if not comment.approved and comment.user == user %}
+                            <p class="text-warning">This comment is awaiting approval</p>
+                        {% endif %}
+                        {% if user.is_authenticated and comment.user == user %}
+                            <button class="btn btn-danger btn-delete" data-comment_id="{{ comment.id }}">Delete</button>
+                            <button class="btn btn-secondary btn-edit" data-comment_id="{{ comment.id }}">Edit</button>
+                        {% endif %}
+                    </div>
+                </div>
             {% endfor %}
         </div>
-    </div>
-    <!-- Creating New Comments -->
-    <div class="col-md-4 card mb-4 mt-3">
-        <div class="card-body">
-        {% if user.is_authenticated %}
-        <h3>Leave a comment:</h3>
-        <p>Posting as: {{ user.username }}</p>
-        <form id="commentForm" method="post"
-            style="margin-top: 1.3em;">
-            {{ comment_form | crispy }}
-            {% csrf_token %}
-            <button id="submitButton" type="submit"
-            class="btn btn-signup btn-lg">Submit</button>
-        </form>
-        {% else %}
-        <p>Log in to leave a comment</p>
-        {% endif %}
+
+        <!-- New Comment Form -->
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    {% if user.is_authenticated %}
+                        <h3>Leave a comment:</h3>
+                        <p>Posting as: {{ user.username }}</p>
+                        <form id="commentForm" method="post">
+                            {{ comment_form | crispy }}
+                            {% csrf_token %}
+                            <button id="submitButton" type="submit" class="btn btn-primary btn-lg mt-2">Submit</button>
+                        </form>
+                    {% else %}
+                        <p>Log in to leave a comment</p>
+                    {% endif %}
+                </div>
+            </div>
         </div>
     </div>
 </div>
 
-<!-- Delete confirmation -->
-<div class="modal fade" id="deleteModal" tabindex="-1"
-  aria-labelledby="deleteModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title"
-          id="deleteModalLabel">Delete comment?</h5>
-        <button type="button" class="btn-close"
-          data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        Are you sure you want to delete your comment?
-        This action cannot be undone.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary"
-          data-bs-dismiss="modal">Close</button>
-        <a id="deleteConfirm" href="#" class="btn
-          btn-danger">Delete</a>
-      </div>
+<!-- Delete Confirmation Modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1" 
+    aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" 
+                  id="deleteModalLabel">Delete comment?</h5>
+                <button type="button" class="btn-close" 
+                  data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete your comment? 
+                This action cannot be undone.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" 
+                  data-bs-dismiss="modal">Close</button>
+                <a id="deleteConfirm" href="#" class="btn 
+                  btn-danger">Delete</a>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 {% endblock %}
 
 {% block extras %}
 <script src="{% static 'js/comments.js' %}"></script>
+<script src="{% static 'js/ratings.js' %}"></script>
 {% endblock %}
