--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -6,7 +6,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-4">
-            <img src="{{ book.cover_image.url }}" class="img-fluid" alt="{{ book.title }} cover image">
+            <img src="{{ book.cover_image.url }}" class="img-fluid mb-3" alt="{{ book.title }} cover image">
         </div>
         <div class="col-md-8">
             <h1>{{ book.title }}</h1>
@@ -54,22 +54,22 @@
             </strong>
         </div>
     </div>
-    <div class="row mt-3">
-        <div class="col-md-8">
+    <div class="row mt-3 d-flex align-items-stretch">
+        <div class="col-md-8 mb-3 comment-container">
             <h3>Comments:</h3>
             {% if comment_count == 0 %}
                 <p>Be the first to leave a comment</p>
             {% endif %}
             {% for comment in comments %}
-                <div class="card mb-3 {% if not comment.approved and comment.user == user %} faded {% elif not comment.approved %} d-none {% endif %}">
+                <div class="comment-card mb-3 {% if not comment.approved and comment.user == user %} faded {% elif not comment.approved %} d-none {% endif %}">
                     <div class="card-body">
                         <p class="font-weight-bold">
-                            {{ comment.user }}:
-                            <span class="font-weight-normal">{{ comment.created_on }}</span> wrote:
+                            Author: {{ comment.user }}
                         </p>
                         <div id="comment{{ comment.id }}">
                             {{ comment.body | linebreaks }}
                         </div>
+                        <span class="font-weight-normal">Posted on {{ comment.created_on }}</span>
                         {% if not comment.approved and comment.user == user %}
                             <p class="text-warning">This comment is awaiting approval</p>
                         {% endif %}
@@ -83,8 +83,8 @@
         </div>
 
         <!-- New Comment Form -->
-        <div class="col-md-4">
-            <div class="card">
+        <div class="col-md-4 d-flex flex-column">
+            <div class="add-comment-card flex-grow-1">
                 <div class="card-body">
                     {% if user.is_authenticated %}
                         <h3>Leave a comment:</h3>
