--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 
+{% url 'about_us' as about_us_url %}
 {% url 'account_login' as login_url %}
 {% url 'account_signup' as signup_url %}
 {% url 'account_logout' as logout_url %}
@@ -42,6 +43,10 @@
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == books_url %}active" aria-current="page{% endif %}"
                         href="{{ books_url }}">Books</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == about_us_url %}active{%endif%}"
+                          aria-current="page" href="{% url 'about_us' %}">About Us</a>
                     </li>
                 </ul>
                 <!-- Login, out and register -->
