--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -24,23 +24,40 @@
             <hr>
             {% if user.is_authenticated %}
             <p>Please rate this book:</p>
-            <form id="ratingForm" method="POST">
-                {% csrf_token %}
-                <div class="rating-stars">
-                    <i class="far fa-star star-icon" data-value="1"></i>
-                    <i class="far fa-star star-icon" data-value="2"></i>
-                    <i class="far fa-star star-icon" data-value="3"></i>
-                    <i class="far fa-star star-icon" data-value="4"></i>
-                    <i class="far fa-star star-icon" data-value="5"></i>
-                </div>
-                <input type="hidden" name="rating" id="rating-input" value="0">
-                <div class="mt-2">
-                    <p>Your rating: <span id="user-rating">{{ user_rating }}</span></p>
-                    <button id="submitButton" type="submit" class="btn btn-primary">Submit Rating</button>
-                </div>
-            </form>
+            <div class="rating-stars">
+                <form id="ratingForm1" class="star-form" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="rating" value="1">
+                    <button type="submit" class="far fa-star star-icon" data-value="1"></button>
+                </form>
+                <form id="ratingForm2" class="star-form" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="rating" value="2">
+                    <button type="submit" class="far fa-star star-icon" data-value="2"></button>
+                </form>
+                <form id="ratingForm3" class="star-form" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="rating" value="3">
+                    <button type="submit" class="far fa-star star-icon" data-value="3"></button>
+                </form>
+                <form id="ratingForm4" class="star-form" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="rating" value="4">
+                    <button type="submit" class="far fa-star star-icon" data-value="4"></button>
+                </form>
+                <form id="ratingForm5" class="star-form" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="rating" value="5">
+                    <button type="submit" class="far fa-star star-icon" data-value="5"></button>
+                </form>
+            </div>
+            
+
+            <div class="mt-2">
+                <p>Your rating: <span id="user-rating">{{ user_rating }}</span></p>
+            </div>
             {% else %}
-                    <p>Log in to rate this book</p>
+            <p>Log in to rate this book</p>
             {% endif %}
         </div>
     </div>
