--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -22,6 +22,13 @@
     <div class="row mt-4">
         <div class="col-12">
             <hr>
+            <div class="mt-2">
+            {% if average_rating %}
+                <p>Average Rating: <span id="average-rating">{{ average_rating }}</span></p>
+            {% else %}
+                <p>No ratings yet</p>
+            {% endif %}
+            </div>
             {% if user.is_authenticated %}
             <p>Please rate this book:</p>
             <div class="rating-stars">
