--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -52,103 +52,106 @@
         </div>
     </div>
 
-    <!-- Comments Section -->
-    <div class="row mt-4">
-        <div class="col-12">
-            <hr>
-            <strong class="text-secondary">
-                {% if comment_count == 1 %}
-                    <i class="far fa-comments"></i> {{ comment_count }} Comment
-                {% else %}
-                    <i class="far fa-comments"></i> {{ comment_count }} Comments
-                {% endif %}
-            </strong>
+    <!-- User Interaction Section -->
+    <div class="user-interactions-container">
+        <!-- Comments Section -->
+        <div class="row mt-2">
+            <div class="col-12">
+                <hr>
+                <strong class="text-secondary">
+                    {% if comment_count == 1 %}
+                        <i class="far fa-comments"></i> {{ comment_count }} Comment
+                    {% else %}
+                        <i class="far fa-comments"></i> {{ comment_count }} Comments
+                    {% endif %}
+                </strong>
+            </div>
         </div>
-    </div>
-    <div class="row mt-3 d-flex align-items-stretch">
-        <div class="col-md-8 mb-3 comment-container">
-            <h3>Comments:</h3>
-            {% if comment_count == 0 %}
-                <p>Be the first to leave a comment</p>
-            {% endif %}
-            {% for comment in comments %}
-                <div class="comment-card mb-3 {% if not comment.approved and comment.user == user %} faded {% elif not comment.approved %} d-none {% endif %}">
-                    <div class="card-body">
-                        <p class="font-weight-bold">
-                            Author: {{ comment.user }}
-                        </p>
-                        <div id="comment{{ comment.id }}">
-                            {{ comment.body | linebreaks }}
+        <div class="row gutters mt-3 d-flex align-items-stretch">
+            <div class="col-md-8 mb-3 comment-container">
+                <h3>Comments:</h3>
+                {% if comment_count == 0 %}
+                    <p>Be the first to leave a comment</p>
+                {% endif %}
+                {% for comment in comments %}
+                    <div class="comment-card mb-3 {% if not comment.approved and comment.user == user %} faded {% elif not comment.approved %} d-none {% endif %}">
+                        <div class="card-body">
+                            <p class="font-weight-bold">
+                                Author: {{ comment.user }}
+                            </p>
+                            <div id="comment{{ comment.id }}">
+                                {{ comment.body | linebreaks }}
+                            </div>
+                            <span class="font-weight-normal">Posted on {{ comment.created_on }}</span>
+                            {% if not comment.approved and comment.user == user %}
+                                <p class="text-warning">This comment is awaiting approval</p>
+                            {% endif %}
+                            {% if user.is_authenticated and comment.user == user %}
+                                <button class="btn btn-danger btn-delete" data-comment_id="{{ comment.id }}">Delete</button>
+                                <button class="btn btn-secondary btn-edit" data-comment_id="{{ comment.id }}">Edit</button>
+                            {% endif %}
                         </div>
-                        <span class="font-weight-normal">Posted on {{ comment.created_on }}</span>
-                        {% if not comment.approved and comment.user == user %}
-                            <p class="text-warning">This comment is awaiting approval</p>
-                        {% endif %}
-                        {% if user.is_authenticated and comment.user == user %}
-                            <button class="btn btn-danger btn-delete" data-comment_id="{{ comment.id }}">Delete</button>
-                            <button class="btn btn-secondary btn-edit" data-comment_id="{{ comment.id }}">Edit</button>
+                    </div>
+                {% endfor %}
+            </div>
+
+            <!-- Leave a Comment and Rating Form -->
+            <div class="col-md-4 d-flex flex-column">
+                <div class="add-comment-card mb-3 flex-grow-1">
+                    <div class="card-body">
+                        {% if user.is_authenticated %}
+                            <!-- Comment Section -->
+                            <h3>Leave a comment:</h3>
+                            <span><i class="far fa-user"></i> {{ user.username }}</span>
+                            <form id="commentForm" method="post">
+                                {{ comment_form | crispy }}
+                                {% csrf_token %}
+                                <button id="submitButton" type="submit" class="btn btn-primary btn-lg mt-2">Submit</button>
+                            </form>
+                            <!-- Rating Section -->
+                            <div class="row mt-4">
+                                <div class="col-12">
+                                    <hr>
+                                    <strong>Please rate this book:</strong>
+                                    <div class="rating-stars mt-2">
+                                        <form id="ratingForm1" class="star-form" method="POST">
+                                            {% csrf_token %}
+                                            <input type="hidden" name="rating" value="1">
+                                            <button type="submit" class="far fa-star star-icon" data-value="1"></button>
+                                        </form>
+                                        <form id="ratingForm2" class="star-form" method="POST">
+                                            {% csrf_token %}
+                                            <input type="hidden" name="rating" value="2">
+                                            <button type="submit" class="far fa-star star-icon" data-value="2"></button>
+                                        </form>
+                                        <form id="ratingForm3" class="star-form" method="POST">
+                                            {% csrf_token %}
+                                            <input type="hidden" name="rating" value="3">
+                                            <button type="submit" class="far fa-star star-icon" data-value="3"></button>
+                                        </form>
+                                        <form id="ratingForm4" class="star-form" method="POST">
+                                            {% csrf_token %}
+                                            <input type="hidden" name="rating" value="4">
+                                            <button type="submit" class="far fa-star star-icon" data-value="4"></button>
+                                        </form>
+                                        <form id="ratingForm5" class="star-form" method="POST">
+                                            {% csrf_token %}
+                                            <input type="hidden" name="rating" value="5">
+                                            <button type="submit" class="far fa-star star-icon" data-value="5"></button>
+                                        </form>
+                                    </div>
+                                    
+
+                                    <div class="mt-2">
+                                        <p>Your rating: <span id="user-rating">{{ user_rating }}</span></p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        {% else %}
+                            <p>Log in to leave a comment and/or a rating</p>
                         {% endif %}
                     </div>
-                </div>
-            {% endfor %}
-        </div>
-
-        <!-- Leave a Comment and Rating Form -->
-        <div class="col-md-4 d-flex flex-column">
-            <div class="add-comment-card flex-grow-1">
-                <div class="card-body">
-                    {% if user.is_authenticated %}
-                        <!-- Comment Section -->
-                        <h3>Leave a comment:</h3>
-                        <span><i class="far fa-user"></i> {{ user.username }}</span>
-                        <form id="commentForm" method="post">
-                            {{ comment_form | crispy }}
-                            {% csrf_token %}
-                            <button id="submitButton" type="submit" class="btn btn-primary btn-lg mt-2">Submit</button>
-                        </form>
-                        <!-- Rating Section -->
-                        <div class="row mt-4">
-                            <div class="col-12">
-                                <hr>
-                                <strong>Please rate this book:</strong>
-                                <div class="rating-stars mt-2">
-                                    <form id="ratingForm1" class="star-form" method="POST">
-                                        {% csrf_token %}
-                                        <input type="hidden" name="rating" value="1">
-                                        <button type="submit" class="far fa-star star-icon" data-value="1"></button>
-                                    </form>
-                                    <form id="ratingForm2" class="star-form" method="POST">
-                                        {% csrf_token %}
-                                        <input type="hidden" name="rating" value="2">
-                                        <button type="submit" class="far fa-star star-icon" data-value="2"></button>
-                                    </form>
-                                    <form id="ratingForm3" class="star-form" method="POST">
-                                        {% csrf_token %}
-                                        <input type="hidden" name="rating" value="3">
-                                        <button type="submit" class="far fa-star star-icon" data-value="3"></button>
-                                    </form>
-                                    <form id="ratingForm4" class="star-form" method="POST">
-                                        {% csrf_token %}
-                                        <input type="hidden" name="rating" value="4">
-                                        <button type="submit" class="far fa-star star-icon" data-value="4"></button>
-                                    </form>
-                                    <form id="ratingForm5" class="star-form" method="POST">
-                                        {% csrf_token %}
-                                        <input type="hidden" name="rating" value="5">
-                                        <button type="submit" class="far fa-star star-icon" data-value="5"></button>
-                                    </form>
-                                </div>
-                                
-
-                                <div class="mt-2">
-                                    <p>Your rating: <span id="user-rating">{{ user_rating }}</span></p>
-                                </div>
-
-                            </div>
-                        </div>
-                    {% else %}
-                        <p>Log in to leave a comment and/or a rating</p>
-                    {% endif %}
                 </div>
             </div>
         </div>
