Fix book rating text display on book_detail page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -242,6 +242,7 @@ footer p {
 /* Media query for larger screens */
 @media (min-width: 768px) {
     main {
+        align-self: center;
         margin-left: 5%;
         margin-right: 5%;
     }
