--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -240,10 +240,15 @@ footer {
     padding: 5px;
     color: #333;
     text-decoration: none;
+    font-size: 16px;
 }
 
 .return-nav-links .nav-link:hover{
     color: #ffcc00;
+}
+
+.title {
+    margin-top: 15px;
 }
 
 .book-star-ratings {
